# openai-study-mode-clone

./: .dockerignore  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
agent-core/: .env.example  README.md  main.py  pyproject.toml
agent-core/extra/: few_shots_example.py
frontend/: .env.example  Dockerfile  README.md  agent.py  chainlit_app.py  pyproject.toml
frontend/public/: theme.json
mcp-server/: .env.example  Dockerfile  README.md  build_vector_store.py  pyproject.toml  server.py  utils.py
mcp-server/knowledge-base/: prompt_engineering_tutorial.txt
