[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "chainlit>=2.8.0",
    "chromadb>=1.0.21",
    "ddgs>=9.5.5",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.11",
    "markdown>=3.9",
    "numpy>=2.3.3",
    "openai-agents>=0.3.0",
    "unstructured[docx,pptx,xlsx]>=0.18.15",
]
